; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/executer/extr_exutils.c_AcpiExEnterInterpreter.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/executer/extr_exutils.c_AcpiExEnterInterpreter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ExEnterInterpreter = common dso_local global i32 0, align 4
@ACPI_MTX_INTERPRETER = common dso_local global i32 0, align 4
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Could not acquire AML Interpreter mutex\00", align 1
@ACPI_MTX_NAMESPACE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [38 x i8] c"Could not acquire AML Namespace mutex\00", align 1
@return_VOID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AcpiExEnterInterpreter() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @ExEnterInterpreter, align 4
  %3 = call i32 @ACPI_FUNCTION_TRACE(i32 %2)
  %4 = load i32, i32* @ACPI_MTX_INTERPRETER, align 4
  %5 = call i32 @AcpiUtAcquireMutex(i32 %4)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = call i64 @ACPI_FAILURE(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @AE_INFO, align 4
  %11 = call i32 @ACPI_ERROR(i32 ptrtoint ([40 x i8]* @.str to i32))
  br label %12

12:                                               ; preds = %9, %0
  %13 = load i32, i32* @ACPI_MTX_NAMESPACE, align 4
  %14 = call i32 @AcpiUtAcquireMutex(i32 %13)
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* %1, align 4
  %16 = call i64 @ACPI_FAILURE(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %12
  %19 = load i32, i32* @AE_INFO, align 4
  %20 = call i32 @ACPI_ERROR(i32 ptrtoint ([38 x i8]* @.str.1 to i32))
  br label %21

21:                                               ; preds = %18, %12
  %22 = load i32, i32* @return_VOID, align 4
  ret void
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @AcpiUtAcquireMutex(i32) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @ACPI_ERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
